<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_load_more_photos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.UserActivity"
        android:paddingHorizontal="16dp"
        android:paddingTop="14dp">

        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_email"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/user_circular_frame"
            android:backgroundTint="@color/primary_light_color"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_user_name_alpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_alphabet"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="38dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="John Doe"
            android:layout_marginTop="6dp"
            android:textAlignment="center"
            android:textColor="@color/primary_light_color"
            android:paddingHorizontal="8dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_phone"
            android:clickable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_personal_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:textColor="@color/primary_dark_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_personal_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardElevation="5dp"
            android:layout_marginTop="6dp"
            android:shadowColor="@color/black"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_personal_details">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="14dp"
                android:background="@drawable/curved_border_color">

                <LinearLayout
                    android:id="@+id/ll_personal_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_company"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Abc Pvt Ltd"
                            android:textSize="14sp"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_website"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="www.xyz.com"
                            android:textSize="14sp"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_address"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Abc City, Xyz Country"
                            android:textSize="14sp"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_map"
                    android:layout_marginTop="-2dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_collections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection"
            android:textColor="@color/primary_dark_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_personal_details"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardElevation="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_collections"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@drawable/curved_border_color">

                <ImageView
                    android:id="@+id/iv_collection_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_photos"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:tint="@color/primary_light_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photos"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/primary_light_color"
                    app:layout_constraintStart_toEndOf="@id/iv_collection_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_photos_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5k+"
                    android:layout_marginEnd="30dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/primary_light_color"
                    app:layout_constraintEnd_toStartOf="@id/iv_photos_more"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/iv_photos_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_load_more"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_posts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardElevation="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_photos"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_load_more_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:clickable="true"
                android:background="@drawable/curved_border_color">

                <ImageView
                    android:id="@+id/iv_posts_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_posts"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:tint="@color/primary_light_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/primary_light_color"
                    app:layout_constraintStart_toEndOf="@id/iv_posts_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_posts_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:layout_marginEnd="30dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/primary_light_color"
                    app:layout_constraintEnd_toStartOf="@id/iv_posts_more"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/iv_posts_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_load_more"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_todos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardElevation="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_posts"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_load_more_todos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@drawable/curved_border_color">

                <ImageView
                    android:id="@+id/iv_todos_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_todos"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:tint="@color/primary_light_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todos"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/primary_light_color"
                    app:layout_constraintStart_toEndOf="@id/iv_todos_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_todos_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="200"
                    android:layout_marginEnd="30dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/primary_light_color"
                    app:layout_constraintEnd_toStartOf="@id/iv_todos_more"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/iv_todos_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_load_more"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>